# tiny-process-library

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  examples  examples.cpp  process.cc  process.cpp  process.hpp  process_unix.cc  process_unix.cpp  process_win.cc  process_win.cpp  tiny-process-library-config.cmake
test/: CMakeLists.txt  multithread_test.cpp  open_close_test.cc  open_close_test.cpp
tests/: io_test.cpp
